[tool.poetry]
name = "medcom-ble"
version = "0.1.0"
description = "Library to communicate with Medcom BLE radiation monitors"
authors = ["Ed Lafargue <ed@wizkers.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
bleak = "^0.21.0"
bleak-retry-connector = "^3.1.2"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/elafargue/medcom-ble/issues"
"Changelog" = "https://github.com/elafargue/medcom-ble/blob/main/CHANGELOG.md"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
